final login page

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -27,8 +27,6 @@
       <!-- Login Form Section -->
       <div class="login-box">
         <h1 class="title">Health Tracker</h1>
-        <div class="round-button">
-          <p>Register Here!</p>
         </div>
         <form>
           <div class="input-container">
@@ -38,6 +36,7 @@
             <input type="password" placeholder="Password" class="input-field" />
           </div>
           <button class="login-btn">Login</button>
+          <button class="login-btn">Register</button>
         </form>
       </div>
     </div>
