adjusting index.html/login.js and more

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -23,28 +23,9 @@
   <i class="fas fa-apple-alt moving-icon"></i>
 </div>
 
-<div class="container">
-  <!-- Login Form Section -->
-  <div class="login-box">
-    <h1 class="title">Health Tracker</h1>
-    <div class="round-button">
-      <p>Register Here!</p>
-    </div>
-    <form>
-      <div class="input-container">
-        <input type="text" placeholder="Username" class="input-field" />
-      </div>
-      <div class="input-container">
-        <input type="password" placeholder="Password" class="input-field" />
-      </div>
-      <button class="login-btn">Login</button>
-    </form>
-  </div>
-</div>
-
 <!-- Add this div to be the root element for React -->
 <div id="root"></div>
 
+<script src="path-to-your-react-bundle.js"></script>
 </body>
 </html>
-
