--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,45 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Health Tracker Login</title>
-    <link rel="stylesheet" href="register-page.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    />
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Health Tracker Login</title>
+  <link rel="stylesheet" href="register-page.css" />
+  <link
+          href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
+          rel="stylesheet"
+  />
+  <link
+          rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+  />
+</head>
 
-  <body>
-    <!-- Moving Icons Section (Above Login) -->
-    <div class="icon-container">
-      <i class="fas fa-heartbeat moving-icon"></i>
-      <i class="fas fa-running moving-icon"></i>
-      <i class="fas fa-apple-alt moving-icon"></i>
-    </div>
+<body>
+<!-- This is where React will render the components -->
+<div id="root"></div>
+<!-- React's bundled JavaScript will be injected here during build -->
 
-    <div class="container">
-      <!-- Login Form Section -->
-      <div class="login-box">
-        <h1 class="title">Health Tracker</h1>
-        <div class="round-button">
-          <p>Register Here!</p>
-        </div>
-        <form>
-          <div class="input-container">
-            <input type="text" placeholder="Username" class="input-field" />
-          </div>
-          <div class="input-container">
-            <input type="password" placeholder="Password" class="input-field" />
-          </div>
-          <button class="login-btn">Login</button>
-        </form>
-      </div>
-    </div>
-  </body>
+<script src="./login.js"></script>
+</body>
 </html>
