--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Health Tracker Login</title>
-  <link rel="stylesheet" href="register-page.css" />
+  <title>Health Tracker</title>
+  <!-- Link to styles and fonts -->
   <link
           href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
           rel="stylesheet"
@@ -14,37 +14,9 @@
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
   />
 </head>
-
 <body>
-<!-- Moving Icons Section (Above Login) -->
-<div class="icon-container">
-  <i class="fas fa-heartbeat moving-icon"></i>
-  <i class="fas fa-running moving-icon"></i>
-  <i class="fas fa-apple-alt moving-icon"></i>
-</div>
-
-<div class="container">
-  <!-- Login Form Section -->
-  <div class="login-box">
-    <h1 class="title">Health Tracker</h1>
-    <div class="round-button">
-      <p>Register Here!</p>
-    </div>
-    <form>
-      <div class="input-container">
-        <input type="text" placeholder="Username" class="input-field" />
-      </div>
-      <div class="input-container">
-        <input type="password" placeholder="Password" class="input-field" />
-      </div>
-      <button class="login-btn">Login</button>
-    </form>
-  </div>
-</div>
-
-<!-- Add this div to be the root element for React -->
-<div id="root"></div>
-
+<div id="root"></div> <!-- This is the only div you need in index.html -->
 </body>
 </html>
+
 
